PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Default to 2.5% std dev threshold default on new installs

Phoronix Test Suite 10.2.0 Milestone 2
6 December 2020

pts-core: Transition to new JSON-based data format for managing test install metadata while maintaining backwards compatibility with prior XML format
pts-core: Begin tracking test run-times per-hash (all configured test options) for more detailed time tracking and in turn time estimates on subsequent runs
pts-core: Increase compression factor when uploading benchmark results
pts-core: Last minute fixes for PHP 8.0 compatibility
phodevi: Report if CPUFreq Boost enabled/disabled
turbostat: Add TurboStat module to easily generate turbostat dumps on a per-test basis to log files
phoromatic: Much faster web viewer performance especially with large databases

Phoronix Test Suite 10.2.0 Milestone 1
21 November 2020

pts-core: Log lock_stat, config.gz, dmidecode to system logs
pts-core: Only show Apple options when running on macOS
pts-core: Add extra safeguard around FORCE_TIMES_TO_RUN for disabling dynamic run count
ob_auto_compare: Intelligently choose more relevant reference results
phodevi: macOS CPU temperature monitoring support
phodevi: Support for reading WattsUp Pro power meter data directly without utility using WATTS_UP_METER=<USB TTY>
phodevi: Report Google Compute Engine machine type as part of motherboard string
phodevi: Add dumpe2fs to system logs when running on EXT4 and root
phodevi: Add block size reporting
phodevi: CPU power reporting for Ampere Altra
phodevi: Various Ampere Altra hardware detection/reporting improvements
phodevi: Support reading CPU package power consumption on macOS using powermetrics

Phoronix Test Suite 10.0.1
21 October 2020

pts-core: Fix for older versions of PHP such as in RHEL7
pts-core: Add Thermald version reporting to system table when active
phodevi: Detection improvements for new CPUs
phodevi: Avoid "11th Gen Intel" CPU string